--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
+!backend/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -35,3 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+application-dev.yml
+application-secret.yml
